--- a/app/src/main/res/layout/add_board_layout.xml
+++ b/app/src/main/res/layout/add_board_layout.xml
@@ -17,18 +17,18 @@
         app:layout_constraintBottom_toTopOf="@+id/materialABP"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/materialABP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/materialLabelABP"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/sizeLabelABP"
-        app:layout_constraintStart_toStartOf="parent" />
+    <!--<EditText-->
+        <!--android:id="@+id/materialABP"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_below="@+id/materialLabelABP"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:ems="10"-->
+        <!--android:inputType="textPersonName"-->
+        <!--app:layout_constraintBottom_toTopOf="@+id/sizeLabelABP"-->
+        <!--app:layout_constraintStart_toStartOf="parent" />-->
 
     <TextView
         android:id="@+id/sizeLabelABP"
@@ -144,5 +144,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/camera" />
+
+    <Spinner
+        android:id="@+id/materialABP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/sizeLabelABP"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
