--- a/app/src/main/res/layout/add_board_layout.xml
+++ b/app/src/main/res/layout/add_board_layout.xml
@@ -151,6 +151,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
+        android:spinnerMode="dialog"
         app:layout_constraintBottom_toTopOf="@+id/sizeLabelABP"
         app:layout_constraintStart_toStartOf="parent" />
 
